manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saaspe-azure-services
  namespace: {#namespace#}
  labels:
    app: saaspe-azure-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saaspe-azure-services
  template:
    metadata:
      name: saaspe-azure-services
      labels:
        app: saaspe-azure-services
    spec:
      priorityClassName: low-priority-pod
      containers:
        - name: saaspe-azure-services
          image: {#image#}
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "350Mi"
              cpu: "350m"
            limits:
              memory: "512Mi"
              cpu: "512m"   
---
apiVersion: v1
kind: Service
metadata:
  name: saaspe-azure-services-svc
  namespace:  {#namespace#}
  labels:
    app: saaspe-azure-services
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: saaspe-azure-services
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: saaspe-azure-services-ingress
  namespace: {#namespace#}
spec:
  rules:
  - host: {#host#}
    http:
      paths:
      - backend:
          service:
            name: saaspe-azure-services-svc
            port:
              number: 8081
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - {#host#}
    secretName: saspe-app-tls1
